--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
   <string name="app_name">BackgroundJobStat</string>
     <string name="start_services">Start Services</string>
   <string name="stop_services">Stop Services</string>
+  <string name="naive_services">Naive services</string>
+  <string name="schedule_job">Schedule Job</string>
+  <string name="jobdispatcher_services">JobDispatcher services</string>
+  <string name="cancel_schedule">Cancel Schedule</string>
 </resources>
